Criando os Departamentos

--- a/ControleDeVendas/Views/Shared/_Layout.cshtml
+++ b/ControleDeVendas/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - ControleDeVendas</p>
+            <p>&copy; 2020 - Controle de Vendas</p>
         </footer>
     </div>
 
