--- a/ControleDeVendas/Views/Departamentos/Details.cshtml
+++ b/ControleDeVendas/Views/Departamentos/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ControleDeVendas.Models.Departamento
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
     <h4>Departamento</h4>
@@ -20,5 +20,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para Lista</a>
 </div>
