--- a/ControleDeVendas/Views/Departamentos/Delete.cshtml
+++ b/ControleDeVendas/Views/Departamentos/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@model ControleDeVendas.Models.Departamento
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Apagar";
 }
 
-<h2>Delete</h2>
+<h2>Apagar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você quer realmente apagar este Departamento?</h3>
+<hr/>
 <div>
     <h4>Departamento</h4>
     <hr />
@@ -21,7 +22,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Apagar" class="btn btn-default" /> |
+        <a asp-action="Index">Voltar para Lista</a>
     </form>
 </div>
