--- a/ControleDeVendas/Views/Departamentos/Index.cshtml
+++ b/ControleDeVendas/Views/Departamentos/Index.cshtml
@@ -7,11 +7,11 @@
 <h2>Departamentos</h2>
 
 <p>
-    <a asp-action="Create">Novo Departamento</a>
+    <a asp-action="Create" class="btn btn-default">Novo Departamento</a>
 </p>
 <table class="table">
     <thead>
-        <tr>
+        <tr class="success">
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
